# agent-memory-manager

./: .gitignore  AGENTS.md  README.md  electron-builder.yml  package.json  pnpm-lock.yaml
.github/workflows/: release-desktop.yml  release-windows.yml
docs/: README.md
docs/goals/: agent-first-harness.md
docs/issues/: 2026-06-08-search-body-coverage.md
docs/loop/: README.md  loops.md
docs/verification/: 2026-06-08-fresh-agent-handoff.md  2026-06-08-live-mvp-check.md  2026-06-08-search-body-fix.md
electron/preload/: index.ts
electron/shared/: api.ts  channels.test.ts  channels.ts  validation.ts
schemas/: current-memory-report.schema.json  memory-profile.schema.json
scripts/: verify-loop.sh  verify-profile-cache.mjs  verify-update-assets.mjs  verify-updater-json.mjs  verify.sh
src/: App.css  App.fixture.test.tsx  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/: current-memory-report.sample.json
src-tauri/src/: lib.rs  main.rs  mcp_manager.rs  skill_manager.rs
src-tauri/src/memory/: codex_audit.rs  commands.rs  correction.rs  mod.rs  parser.rs  paths.rs  profile.rs  risk.rs  scanner.rs
src/components/: AgentConfigManager.tsx  CorrectionDialog.tsx  Inspector.tsx  KnowledgeBoard.tsx  McpManager.test.tsx  McpManager.tsx  SettingsDialog.test.tsx  SettingsDialog.tsx  SettingsPage.test.tsx  SettingsPage.tsx  Sidebar.tsx  SkillManager.tsx
src/hooks/: useAppUpdater.test.tsx  useAppUpdater.ts
src/lib/: agentScope.test.ts  agentScope.ts  api.test.ts  api.ts  appUpdate.test.ts  appUpdate.ts  demoData.ts  i18n.ts  (+12 more)
(+99 files in other folders)
