[package]
name = "agent-memory-manager"
version = "0.1.1"
description = "A local Codex memory inspector and safe correction manager"
authors = ["Linc"]
edition = "2021"
default-run = "agent-memory-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_memory_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
toml_edit = "0.25"
serde_yaml = "0.9"
keyring = "4.1.5"
